Markdown styling added

--- a/css/primary.css
+++ b/css/primary.css
@@ -3,5 +3,178 @@
 /* ######################
     STYLES */
 body {
-  background-color: blanchedalmond;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: "Source Sans Pro", sans-serif;
+  background-color: black;
+  color: white;
 }
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: gray;
+}
+
+main {
+  background-color: #193549;
+  font-family: "Source Code Pro", monospace;
+  color: #e0d021;
+  margin: 0;
+  padding: 3rem;
+}
+
+.main-content {
+  margin: 0 auto;
+  max-width: 80ch;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  color: red;
+}
+
+a:active {
+  color: #e0546c;
+}
+
+a:visited {
+  color: #e0546c;
+}
+
+a:link {
+  color: #e0546c;
+}
+
+a:hover {
+  color: aqua;
+}
+
+main a {
+  text-decoration: none;
+}
+
+main a:link {
+  color: #e0546c;
+}
+
+main a:active {
+  color: #e0546c;
+}
+
+main a:visited {
+  color: #e0546c;
+}
+
+main a:hover {
+  color: aqua;
+  text-decoration: underline;
+}
+
+nav {
+  padding-right: 2rem;
+}
+
+nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+nav li {
+  padding: 0.5rem 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #f5992b;
+  margin-top: 3rem;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+h1 + h2,
+h2 + h3,
+h3 + h4 {
+  margin-top: 0;
+}
+
+h1:before {
+  content: '# ';
+}
+
+h2:before {
+  content: '## ';
+}
+
+h3:before {
+  content: '### ';
+}
+
+h4:before {
+  content: '#### ';
+}
+
+main ul {
+  list-style: none;
+  margin: 1rem 0 0 0;
+  padding: 0;
+}
+
+main li:before {
+  content: '- ';
+}
+
+main strong:before, main strong:after {
+  content: '**';
+}
+
+main em:before, main em:after {
+  content: '_';
+}
+
+footer p {
+  padding: 1rem 2rem;
+}
+
+#title {
+  padding: 2rem;
+  font-size: x-large;
+}
+/*# sourceMappingURL=primary.css.map */
