adds whiskers logo and typography to navbar & narrows text

--- a/css/primary.scss
+++ b/css/primary.scss
@@ -12,17 +12,22 @@ $main-title-color: $main-sherbet;
 $main-background-body: #193549;
 
 //  Fonts
-$body-font-size: 16px;
-$body-font-face: 'Source Sans Pro', sans-serif;
-$main-font-face: 'Source Code Pro', monospace;
+$font-body-size: 16px;
+$font-body-family: 'Source Sans Pro', sans-serif;
+
+$font-main-family: 'Source Code Pro', monospace;
+
+$font-title-family: aktiv-grotesk, sans-serif;
+$font-title-weight: 900;
+$font-title-style: normal;
 
 /* ######################
     STYLES */
 body {
 	margin: 0;
 	padding: 0;
-	font-size: $body-font-size;
-	font-family: $body-font-face;
+	font-size: $font-body-size;
+	font-family: $font-body-family;
 	background-color: black;
 	color: white;
 }
@@ -31,6 +36,23 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+#title {
+	display: flex;
+	flex-direction: row;
+
+	font-family: $font-title-family;
+	font-weight: $font-title-weight;
+	font-style: $font-title-style;
+	font-size: 2rem;
+
+	padding: 2rem;
+
+	img {
+		height: 4rem;
+		margin-right: 0.75rem;
+	}
 }
 
 footer {
@@ -42,7 +64,7 @@ footer {
 
 main {
 	background-color: $main-background-body;
-	font-family: $main-font-face;
+	font-family: $font-main-family;
 	color: $main-text-color;
 	margin: 0;
 	padding: 3rem;
@@ -50,7 +72,7 @@ main {
 
 .main-content {
 	margin: 0 auto;
-	max-width: 80ch;
+	max-width: 70ch;
 }
 
 a {
@@ -70,6 +92,10 @@ a {
 	}
 	&:hover {
 		color: aqua;
+	}
+
+	&:after {
+		content: '\200B';
 	}
 }
 
@@ -162,9 +188,4 @@ main em {
 
 footer p {
 	padding: 1rem 2rem;
-}
-
-#title {
-	padding: 2rem;
-	font-size: x-large;
 }
