Darkens background to improve contrast

--- a/css/primary.scss
+++ b/css/primary.scss
@@ -9,7 +9,7 @@ $main-aqua: aqua;
 $main-text-color: $main-mustard;
 $main-title-color: $main-sherbet;
 
-$main-background-body: #193549;
+$main-background-body: #152a39;
 
 //  Fonts
 $font-body-size: 16px;
