--- a/css/primary.css
+++ b/css/primary.css
@@ -57,7 +57,7 @@ footer {
 }
 
 main {
-  background-color: #193549;
+  background-color: #152a39;
   font-family: "Source Code Pro", monospace;
   color: #e0d021;
   margin: 0;
